# bayesian-ab-testing

./: Dockerfile  README.md  ab_testing.ipynb  docker-compose.yml  pyproject.toml
