[tool.poetry]
name = "ab_testing"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pymc3 = "^3.10.0"
numpy = "^1.19.4"
matplotlib = "^3.3.3"
seaborn = "^0.11.0"
jupyterlab = "^2.2.9"
japanize-matplotlib = "^1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
